--- a/iOS/SideDish/SideDish/Base.lproj/Main.storyboard
+++ b/iOS/SideDish/SideDish/Base.lproj/Main.storyboard
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="v3o-ng-NTa">
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,16 +13,71 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="SideDish" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="VzC-IZ-ahl">
+                                <rect key="frame" x="75" y="194" width="225" height="225"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="VzC-IZ-ahl" secondAttribute="height" multiplier="1:1" id="faT-pp-DBA"/>
+                                </constraints>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RmU-2E-K0a">
+                                <rect key="frame" x="75" y="489" width="225" height="45"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="VgK-Wc-m7L"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" name="PrimaryColor"/>
+                        <constraints>
+                            <constraint firstItem="RmU-2E-K0a" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="GFK-6e-0nU"/>
+                            <constraint firstItem="VzC-IZ-ahl" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.6" id="GdE-5D-9jm"/>
+                            <constraint firstItem="VzC-IZ-ahl" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Zta-Y2-toN"/>
+                            <constraint firstItem="RmU-2E-K0a" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cPA-7X-Lmy"/>
+                            <constraint firstItem="RmU-2E-K0a" firstAttribute="top" secondItem="VzC-IZ-ahl" secondAttribute="bottom" constant="70" id="drZ-tM-9Cn"/>
+                            <constraint firstItem="VzC-IZ-ahl" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.6" id="jwy-U3-tK5"/>
+                            <constraint firstItem="VzC-IZ-ahl" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="150" id="l8F-2H-W93"/>
+                            <constraint firstItem="RmU-2E-K0a" firstAttribute="width" secondItem="VzC-IZ-ahl" secondAttribute="width" id="mIQ-EI-ytq"/>
+                            <constraint firstItem="VzC-IZ-ahl" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="uTK-yZ-NiQ"/>
+                            <constraint firstItem="VzC-IZ-ahl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="vio-1g-dAg">
+                                <variation key="heightClass=compact" constant="50"/>
+                            </constraint>
+                            <constraint firstItem="RmU-2E-K0a" firstAttribute="leading" secondItem="VzC-IZ-ahl" secondAttribute="trailing" constant="250" id="zkE-Yt-j7F">
+                                <variation key="heightClass=compact" constant="130"/>
+                            </constraint>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="GdE-5D-9jm"/>
+                                <exclude reference="uTK-yZ-NiQ"/>
+                                <exclude reference="vio-1g-dAg"/>
+                                <exclude reference="GFK-6e-0nU"/>
+                                <exclude reference="zkE-Yt-j7F"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=compact">
+                            <mask key="constraints">
+                                <include reference="GdE-5D-9jm"/>
+                                <exclude reference="Zta-Y2-toN"/>
+                                <exclude reference="jwy-U3-tK5"/>
+                                <exclude reference="l8F-2H-W93"/>
+                                <include reference="uTK-yZ-NiQ"/>
+                                <include reference="vio-1g-dAg"/>
+                                <include reference="GFK-6e-0nU"/>
+                                <exclude reference="cPA-7X-Lmy"/>
+                                <exclude reference="drZ-tM-9Cn"/>
+                                <include reference="zkE-Yt-j7F"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" id="en6-bW-ULd"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="886" y="126"/>
+            <point key="canvasLocation" x="885.50724637681162" y="125.89285714285714"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="dcz-l2-S0d">
@@ -28,7 +85,6 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="v3o-ng-NTa" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Mh7-f9-gTc">
-                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -41,4 +97,10 @@
             <point key="canvasLocation" x="137.68115942028987" y="125.89285714285714"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="logo" width="134" height="146.66667175292969"/>
+        <namedColor name="PrimaryColor">
+            <color red="0.37254901960784315" green="0.74509803921568629" blue="0.73333333333333328" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
