[#3] refactor: ref 사용하는 대신 data를 이용하는 방식으로 교체
why: DOM을 직접 조작하는 ref 대신 data를 이용하여 HTML에서 css클래스를
주는 방식으로 교체했다.

--- a/FE/src/components/Carousel/Panel/Panel.css
+++ b/FE/src/components/Carousel/Panel/Panel.css
@@ -33,3 +33,11 @@
   transform-origin: top left;
   transform: rotateY(0deg);
 }
+
+.panel-hide {
+  transform: rotateY(90deg);
+}
+
+.panel-show {
+  transform: rotateY(0deg);
+}
